--- a/06.styling-text-extras.html
+++ b/06.styling-text-extras.html
@@ -3,8 +3,8 @@
         <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     </head>
     <body>
-        <p class="italic">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam suscipit orci ac nisl varius varius. <span class="font-black">Nullam auctor finibus pulvinar.</span> Morbi porttitor placerat enim nec consequat.
+        <p class="italic tracking-wide leading-loose">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam suscipit orci ac nisl varius varius. <span class="font-black underline capitalize">Nullam auctor finibus pulvinar.</span> Morbi porttitor placerat enim nec consequat.
         </p>
     </body>
 </html>
