--- a/06-challenge.html
+++ b/06-challenge.html
@@ -4,7 +4,7 @@
     </head>
     <body class="m-8">
         <!-- Title case heading 1 text in dark gray -->
-        <h1 class="text-gray-900 capitalize font-black text-xl">Lorem ipsum dolor sit amet consectetur.</h1>
+        <h1 class="text-gray-900 capitalize font-black text-3xl">Lorem ipsum dolor sit amet consectetur.</h1>
 
         <!-- Paragraph styling with 1.5 line heights & letter spacing -->
         <p class="leading-loose tracking-wide mt-3">
@@ -12,13 +12,14 @@
         </p>
 
         <!-- Treated like a quote with a background and plenty of padding. Italic title -->
-        <div class="bg-blue-900 m-2 p-6 text-blue-200">
+        <div class="bg-blue-900 p-8 text-blue-200 mt-3">
         <p class="">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam suscipit orci ac nisl varius varius. Nullam auctor finibus pulvinar. Morbi porttitor placerat enim nec consequat.
         </p>
-        <p class="mt-3 text-gray-400">- Victor Gonzalez, <span class="italic">instructor</span></p>
+        <p class="mt-3 text-gray-400">- Victor Gonzalez, <span class="italic">Instructor</span></p>
         </div>
+
         <!-- Call to action button, blue with good padding and uppercase -->
-        <button class="uppercase bg-blue-500 text-blue-100 px-4 py-3 mt-3">Enroll Now</button>
+        <button class="uppercase bg-blue-500 text-blue-100 px-4 py-3 mt-6">Enroll Now</button>
     </body>
 </html>
